--- a/index.html
+++ b/index.html
@@ -127,6 +127,30 @@ header { padding: 120px 20px 60px; min-height: 250px; }
 .stat-item { display: inline-block; margin-right: 40px; font-family: 'JetBrains Mono'; font-size: 14px; }
 .stat-label { color: var(--neon-blue); font-weight: bold; }
 
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "name": "Dixlabs",
+  "url": "https://dixlabs.vercel.app",
+  "logo": "https://dixlabs.vercel.app/logo.png",
+  "description": "Dixlabs is a teen-led experimental tech lab building apps, games and digital experiences.",
+  "founder": {
+    "@type": "Person",
+    "name": "Atharv Dixit"
+  },
+  "sameAs": [
+    "https://instagram.com/dixlabsofficial",
+    "https://twitter.com/dixlabsOFF"
+  ],
+  "contactPoint": {
+    "@type": "ContactPoint",
+    "contactType": "customer support",
+    "email": "dixit181896@gmail.com"
+  }
+}
+</script>
+
 /* --- SOCIALS - RESTORED --- */
 .social-footer-strip { margin-bottom: 150px; display: flex; flex-direction: column; align-items: center; gap: 30px; }
 .connect-text { font-family: 'Orbitron'; font-size: 14px; letter-spacing: 10px; color: #ffffff; font-weight: 900; text-transform: uppercase; text-shadow: 0 0 15px rgba(255,255,255,0.8); }
@@ -264,7 +288,7 @@ header { padding: 120px 20px 60px; min-height: 250px; }
     </div>
 
     <footer style="padding:100px 20px; font-family:'JetBrains Mono'; font-size:12px; opacity:0.3; letter-spacing:5px;">
-        DIXIT LABS // 2026 // EST. IN CHAOS
+        DIXIT LABS // 2026 // EST. IN CHAOS . Dixlabs buils interactive apps, games, apps for focus and chatbots for fun. 
     </footer>
 </div>
 
@@ -400,3 +424,4 @@ function filterSelection(cat, el) {
 </script>
 </body>
 </html>
+
