--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="description" content="Dixit Labs - The experimental playground of Atharv Dixit. High-performance games, deep focus tools, and elite sports data archives. Built in India.">
     <meta name="keywords" content="Dixit Labs, Atharv Dixit, Mouse Breaker, Zenboard, Cricket Facts, Coding, India Developer">
     <meta name="author" content="Atharv Dixit">
+    <meta name="robots" content="index, follow">
+<link rel="canonical" href="https://dixitlabs.pages.dev/">
     <meta name="google-site-verification" content="YOUR_ACTUAL_GOOGLE_CODE_HERE" />
 
     <meta property="og:type" content="website">
@@ -274,7 +276,22 @@ header { padding: 120px 20px 60px; min-height: 250px; }
             <a href="mailto:dixit181896@gmail.com" style="color:var(--neon-blue); text-decoration:none; border-bottom:2px solid;">SYS_CONTACT: dixit181896@gmail.com</a>
         </div>
     </section>
+<section style="max-width:1000px;margin:80px auto;text-align:left;font-family:'JetBrains Mono';opacity:0.9;line-height:1.9;">
 
+<h2>About Dixlabs</h2>
+
+<p>
+Dixlabs is an experimental playground created by teen developer Atharv Dixit from India. 
+The platform hosts free browser games, productivity tools, focus applications, and sports fact archives.
+Projects include idle games, sketch tools, deep work timers, and curated cricket and football databases.
+</p>
+
+<p>
+All projects are designed for performance, creativity, and experimentation.
+Visitors can explore focus tools, play browser games, or discover sports history facts.
+</p>
+
+</section>
     <div class="social-footer-strip">
         <div class="connect-text">CONNECT_TO_LABS</div>
         <div class="social-icons-wrap">
@@ -288,7 +305,7 @@ header { padding: 120px 20px 60px; min-height: 250px; }
     </div>
 
     <footer style="padding:100px 20px; font-family:'JetBrains Mono'; font-size:12px; opacity:0.3; letter-spacing:5px;">
-        DIXIT LABS // 2026 // EST. IN CHAOS . Dixlabs buils interactive apps, games, apps for focus and chatbots for fun. 
+        DIXIT LABS // 2026 // EST. IN CHAOS . Dixlabs builds interactive apps, games, apps for focus and chatbots for fun. 
     </footer>
 </div>
 
@@ -424,4 +441,5 @@ function filterSelection(cat, el) {
 </script>
 </body>
 </html>
+
 
