--- a/index.html
+++ b/index.html
@@ -162,6 +162,21 @@ header { padding: 120px 20px 60px; min-height: 250px; }
 .yt-icon:hover svg { fill: var(--neon-red); filter: drop-shadow(0 0 15px var(--neon-red)); transform: scale(1.15); }
 
 .hidden { display: none !important; }
+    .social-footer-strip{
+display:flex;
+flex-direction:column;
+align-items:center;
+justify-content:center;
+width:100%;
+text-align:center;
+}
+
+.social-icons-wrap{
+display:flex;
+justify-content:center;
+align-items:center;
+gap:40px;
+}
 </style>
     <script type="application/ld+json">
 {
@@ -459,6 +474,7 @@ function filterSelection(cat, el) {
 </script>
 </body>
 </html>
+
 
 
 
