--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-IN">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dixit Labs | Games // Focus // Facts</title>
+    <title>Dixlabs — Browser Games, Focus Tools & Sports Facts | Built in India</title>
     <meta name="description" content="Dixit Labs - The experimental playground of Atharv Dixit. High-performance games, deep focus tools, and elite sports data archives. Built in India.">
     <meta name="keywords" content="Dixit Labs, Atharv Dixit, Mouse Breaker, Zenboard, Cricket Facts, Coding, India Developer">
     <meta name="author" content="Atharv Dixit">
@@ -24,6 +24,7 @@
     <meta property="twitter:image" content="/logo.png">
 
     <link rel="icon" type="image/png" sizes="512x512" href="/logo.png">
+    <meta name="theme-color" content="#020617">
     <link rel="shortcut icon" href="/logo.png">
     <link rel="apple-touch-icon" sizes="180x180" href="/logo.png">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;900&family=JetBrains+Mono:wght@300;700&display=swap" rel="stylesheet">
@@ -474,6 +475,7 @@ function filterSelection(cat, el) {
 </script>
 </body>
 </html>
+
 
 
 
