--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en-IN">
 <head>
+    <link rel="canonical" href="https://dixlabs.vercel.app/">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="index, follow, max-image-preview:large">
     <title>Dixlabs — Browser Games, Focus Tools & Sports Facts | Built in India</title>
     <meta name="description" content="Dixit Labs - The experimental playground of Atharv Dixit. High-performance games, deep focus tools, and elite sports data archives. Built in India.">
     <meta name="keywords" content="Dixit Labs, Atharv Dixit, Mouse Breaker, Zenboard, Cricket Facts, Coding, India Developer">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <meta name="author" content="Atharv Dixit">
     <meta name="robots" content="index, follow">
 <link rel="canonical" href="https://dixitlabs.pages.dev/">
@@ -14,9 +18,9 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://dixitlabs.pages.dev/">
     <meta property="og:title" content="Dixit Labs | Games // Focus // Facts">
-    <meta property="og:description" content="Step into the lab. Explore experimental sims, productivity tools, and the ultimate cricket & football archives.">
-    <meta property="og:image" content="/logo.png">
-
+    <meta property="og:description" content="Step into the lab. Explore experimental sims, productivity tools, and the ultimate cricket & football archives."
+    <meta property="og:image" content="https://dixlabs.vercel.app/logo.png">
+    
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://dixitlabs.pages.dev/">
     <meta property="twitter:title" content="Dixit Labs | Atharv Dixit">
@@ -190,6 +194,19 @@ gap:40px;
  "founder":{
    "@type":"Person",
    "name":"Atharv Dixit"
+ }
+}
+</script>
+    <script type="application/ld+json">
+{
+ "@context":"https://schema.org",
+ "@type":"WebSite",
+ "name":"Dixlabs",
+ "url":"https://dixlabs.vercel.app",
+ "potentialAction":{
+   "@type":"SearchAction",
+   "target":"https://dixlabs.vercel.app/?search={search_term_string}",
+   "query-input":"required name=search_term_string"
  }
 }
 </script>
@@ -475,6 +492,7 @@ function filterSelection(cat, el) {
 </script>
 </body>
 </html>
+
 
 
 
